[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/fonts/Merriweather-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/fonts/Merriweather-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 101
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 87.0
margin_top = -255.0
margin_right = 345.0
margin_bottom = -187.0

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 258.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "Play Game"

[node name="HowToPlayButton" type="Button" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 258.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 4 )
text = "How To Play"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 258.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 5 )
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 93.0
margin_right = 258.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 6 )
text = "Exit Game"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -344.0
margin_top = 128.0
margin_right = 344.0
margin_bottom = 345.0

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 688.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 7 )
text = "Keep Defense"
align = 1
valign = 1

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
